tests/errors/test2.c
int count = 5;
float weight = 150.5;

// Cannot assign a float to an int
count = 10.5;

// Cannot assign an int variable to a float variable
// Mini C is strictly typed
weight = count;

// Type mismatch during inline initialization
int age = 25.5;